# obsidian_cli

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  keylabeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  DOCUMENTATION.yml  FEATURE_REQUEST.yml  QUESTION.yml  config.yml
.github/linters/: .eslintignore  .eslintrc.json  .flake8  .jscpd.json  .markdownlint.jsonc
.github/workflows/: codeql-analysis.yml  greetings.yml  linter.yml  release-drafter.yml  stale.yml  test-and-build.yml
.github/workflows/HOLDING/: automerge-dependabot.yml.hold
obsidian_cli/: input.py  test.py
templates/: Article.md  Book.md  New.md  Paper.md  Person.md  Podcast.md  Thought.md  Tweet.md  Youtube.md
